--- a/contact.html
+++ b/contact.html
@@ -119,7 +119,7 @@
 <body>
   <header class="main-header">
     <div class="logo">
-      <img src="assets/logo.png" alt="Logo">
+      <img src="logo.png" alt="Logo">
       <span>SOOMAALIYA</span>
     </div>
     <nav>
