--- a/policy.html
+++ b/policy.html
@@ -123,7 +123,7 @@
 <body>
   <header class="main-header">
     <div class="logo">
-      <img src="assets/logo.png" alt="Logo">
+      <img src="logo.png" alt="Logo">
       <span>SOOMAALIYA</span>
     </div>
     <nav>
